# lucerna

./: .env.example  .gitignore  .pylintrc  LICENSE  pyproject.toml  readme.md
data/: security_libraries_raw.json  security_libraries_tiny_raw.json
licma/: Dockerfile  docker-compose.yml  requirements.txt
lucerna/: ast_node_checks.py  cvar.py  debug_tools.py  dependents_vulnerabilities.py  documentation_metrics.py  eda.ipynb  exceptions.py  logger.py  package_dependents.py  process_security_libraries_dataset.py
resources/: readme_section_names.json  wiki_file_text_extensions.json
