[project]
name = "lucerna"
version = "0.1.0"
description = ""
authors = [
    {name = "qwerltaz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython (>=3.1.45,<4.0.0)",
    "colorama (>=0.4.6)",
    "pandas (>=2.3.3,<3.0.0)",
    "interrogate (>=1.7.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
