[project]
name = "lucerna"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "click==8.1.7",
    "colorama>=0.4.6",
    "github-dependents-info==1.6.3",
    "gitpython>=3.1.45",
    "interrogate>=1.7.0",
    "methodtools>=0.4.7",
    "pandas>=2.3.3",
    "pip>=25.3",
    "py-readability-metrics>=1.4.5",
    "pygount>=3.1.0",
    "rich>=10.14,<14",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer[all]==0.9.4",
]
